--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,9 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
+			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.slf4j</groupId> -->
-<!-- 			<artifactId>slf4j-log4j12</artifactId> -->
-<!-- 			<version>${slf4j.version}</version> -->
-<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
